objects/Sponsor_Previous_Names__c.object
<CustomObject>
    <fields>
        <fullName>Month_stopped_using_previous_name__c</fullName>
        <label>Month stopped using previous name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousName__c</fullName>
        <label>Previous Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>Sponsor__c</referenceTo>
        <relationshipLabel>Sponsor Previous Names</relationshipLabel>
        <relationshipName>Sponsor_Previous_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_stopped_using_previous_name__c</fullName>
        <label>Year stopped using previous name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sponsor Previous Names</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Sponsor Previous Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsor Previous Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>